# langchain-demo

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  router.py
app/chat_llama/: chat.py  factory.py
app/config/: afs.py  app.py  openai.py
app/controllers/: chat.py
config/: config.py  config.yaml
docs/: appendix.md
handlers/: afs.py  openai.py
models/: afs.py
tools/: check.py  logger.py
