[tool.poetry]
name = "langchain-demo"
version = "0.1.0"
description = "Connect LLM API for demo"
authors = ["Justin Hung <hugh.12345zxcvb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "1.10.2"
setuptools = "^70.0.0"
fastapi = "^0.111.0"
langchain = "^0.2.3"
langchain-core = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
